# miso-flatris

./: README.md  flake.nix  flatris.cabal
.github/workflows/: main.yml
src/: Action.hs  Grid.hs  Main.hs  Model.hs  Tetromino.hs  Update.hs  View.hs
static/: index.html
