cabal-version:       2.2
name:                flatris
version:             0.1.0.0
synopsis:            An implementation of Flatris using Haskell and Miso
category:            Web
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base,
                       miso,
                       containers,
                       aeson,
                       aeson-pretty,
                       random
  default-language:    Haskell2010
  other-modules:       Action
                       Grid
                       Model
                       Tetromino
                       Update
                       View
