cabal-version:       2.2
name:                flatris
version:             0.1.0.0
synopsis:            An implementation of Flatris using Haskell and Miso
category:            Web
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable app
  if arch(wasm32)
    cpp-options:
      -DWASM
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base,
                       miso,
                       mtl,
                       containers,
                       random
  default-language:    Haskell2010
  other-modules:       Action
                       Grid
                       Model
                       Tetromino
                       Update
                       View
